# snark-verifier

./: .gitignore  Cargo.toml  super.sh
snark-verifier/: Cargo.toml
snark-verifier-sdk/: Cargo.toml
snark-verifier-sdk/benches/: read_pk.rs  standard_plonk.rs  zkevm.rs  zkevm_plus_state.rs
snark-verifier-sdk/configs/: two_layer_recursion_first_layer.config  two_layer_recursion_second_layer.json
snark-verifier-sdk/examples/: k_as_witness.rs  range_check.rs  standard_plonk.rs  vkey_as_witness.rs
snark-verifier-sdk/src/: aggregation.rs  circuit_ext.rs  evm.rs  evm_api.rs  file_io.rs  halo2.rs  halo2_api.rs  io.rs  lib.rs  multi_batch.rs  param.rs  snark.rs  snarks.rs  types.rs
snark-verifier-sdk/src/aggregation/: aggregation_circuit.rs  config.rs  multi_aggregation_circuit.rs
snark-verifier-sdk/src/evm_circuits/: evm_circuit.rs  mod.rs  mpt_circuit.rs  poseidon_circuit.rs  state_circuit.rs  super_circuit.rs
snark-verifier-sdk/src/halo2/: aggregation.rs  circuit.rs  config.rs
snark-verifier-sdk/src/multi_batch/: evm.rs  halo2.rs  hash.rs  tests.rs
snark-verifier-sdk/src/snark/: mock.rs
snark-verifier-sdk/src/tests/: evm_verifier.rs  mod.rs  multi_batch_aggregation.rs  single_layer_aggregation.rs  test_circuit_1.rs  test_circuit_2.rs  two_layer_aggregation.rs
snark-verifier/examples/: evm-verifier-with-accumulator.rs  evm-verifier.rs  recursion.rs
snark-verifier/src/: loader.rs  pcs.rs
snark-verifier/src/loader/: evm.rs  native.rs
snark-verifier/src/pcs/: kzg.rs
snark-verifier/src/system/: halo2.rs
snark-verifier/src/util/: arithmetic.rs  (+3 more)
(+25 files in other folders)
